[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "gridmerge"
version = "0.1.0"
description = "Python package for leveling and merging gridded geophysical data"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "GridMerge Contributors"}
]
keywords = ["geophysics", "grid", "merge", "leveling", "magnetic", "radiometric"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.20.0",
    "scipy>=1.7.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
]

[project.scripts]
gridmerge = "gridmerge.cli:main"

[project.urls]
Homepage = "https://github.com/RichardScottOZ/Gridmerge"
Documentation = "https://github.com/RichardScottOZ/Gridmerge"
Repository = "https://github.com/RichardScottOZ/Gridmerge"

[tool.setuptools]
packages = ["gridmerge"]
